--- a/JupyterNotebooks/NB16_CXIII-EM_coin_toss.ipynb
+++ b/JupyterNotebooks/NB16_CXIII-EM_coin_toss.ipynb
@@ -78,24 +78,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "At iteration 0, theta_A = 0.797166,  theta_B = 0.627304\n",
-      "At iteration 1, theta_A = 0.859866,  theta_B = 0.586542\n",
-      "At iteration 2, theta_A = 0.886655,  theta_B = 0.543338\n",
-      "At iteration 3, theta_A = 0.892866,  theta_B = 0.523956\n",
-      "At iteration 4, theta_A = 0.893812,  theta_B = 0.517911\n",
-      "At iteration 5, theta_A = 0.893900,  theta_B = 0.516228\n",
-      "At iteration 6, theta_A = 0.893891,  theta_B = 0.515768\n",
-      "E-M converges at iteration 7\n",
+      "Initial guesses: pA = 0.380 pB = 0.292\n",
+      "At iteration 0, theta_A = 0.749913,  theta_B = 0.694304\n",
+      "At iteration 1, theta_A = 0.759292,  theta_B = 0.719777\n",
+      "At iteration 2, theta_A = 0.754685,  theta_B = 0.725308\n",
+      "At iteration 3, theta_A = 0.750961,  theta_B = 0.729042\n",
+      "At iteration 4, theta_A = 0.748189,  theta_B = 0.731812\n",
+      "At iteration 5, theta_A = 0.746123,  theta_B = 0.733877\n",
+      "At iteration 6, theta_A = 0.744580,  theta_B = 0.735420\n",
+      "At iteration 7, theta_A = 0.743427,  theta_B = 0.736573\n",
+      "At iteration 8, theta_A = 0.742564,  theta_B = 0.737436\n",
+      "E-M converges at iteration 9\n",
       "RESULT:\n",
-      "E-M: theta_A = 0.893891,  theta_B = 0.515768\n",
-      "MLE with complete data: theta_A = 0.825000,  theta_B = 0.400000\n"
+      "E-M: theta_A = 0.742564,  theta_B = 0.737436\n",
+      "MLE with complete data: theta_A = 0.833333,  theta_B = 0.600000\n"
      ]
     }
    ],
@@ -145,8 +148,13 @@
     "pA_heads = np.zeros(100); \n",
     "pB_heads = np.zeros(100); \n",
     "\n",
-    "pA_heads[0] = 0.60 # initial guess\n",
-    "pB_heads[0] = 0.50 # initial guess\n",
+    "# Draw the guesses randomly from uniform distribution\n",
+    "pA_heads[0] = np.random.uniform()\n",
+    "pB_heads[0] = np.random.uniform()\n",
+    "print('Initial guesses: pA = {pA:.3f} pB = {pB:.3f}'.format(pA=pA_heads[0], pB=pB_heads[0]))\n",
+    "\n",
+    "#pA_heads[0] = 0.60 # initial guess\n",
+    "#pB_heads[0] = 0.50 # initial guess\n",
     "\n",
     "# E-M begins!\n",
     "epsilon = 0.001   # error threshold\n",
@@ -166,13 +174,11 @@
     "        # E step:\n",
     "        lA = compute_likelihood(eH, num_coin_toss, pA_heads[j])\n",
     "        lB = compute_likelihood(eH, num_coin_toss, pB_heads[j])\n",
-    "        \n",
-    "        weightA = lA / (lA + lB)\n",
-    "        weightB = lB / (lA + lB)\n",
+    "        weightA = lA / (lA + lB) # Probability that coin A is chosen\n",
+    "        weightB = lB / (lA + lB) # Probability that coin B is chosen\n",
     "              \n",
-    "        expectation_A[i] = weightA*np.array([eH, eT])\n",
-    "        expectation_B[i] = weightB*np.array([eH, eT])\n",
-    "\n",
+    "        expectation_A[i] = weightA*np.array([eH, eT]) # Number of heads/tails assigned to A\n",
+    "        expectation_B[i] = weightB*np.array([eH, eT]) # Number of heads/tails assigned to B\n",
     "  \n",
     "    # M step\n",
     "    theta_A = np.sum(expectation_A, axis = 0)[0] / np.sum(expectation_A) \n",
@@ -217,7 +223,9 @@
     "### Answers to Exercise 2:\n",
     "\n",
     "<ul>\n",
-    "    <li>EM converges very fast, typically within 4 to 7 iterations. The converged result however, is not close to the result we get from MLE.</li>\n",
+    "    <li>Convergence of EM algorithm depends on the random initialization. For some trials, it converges within 4-7 iterations, while the obtained biases are far from the biases obtained from MLE. For other trials, it converges within 15-20 trials. The closeness of the bias results from MLE and EM heavily depend on the random initializations of the coin toss experiment.</li>\n",
+    "    <li>In the E-step, we're looking at the likelihood (binomial) that the given number of heads are observed for either coin. We start with an initial guess of the bias for each coin, and at each step, we try to update the bias (probability of heads) of each coin such that the likelihood of observing the coin toss experiment outcome is maximized. This problem does not have a global maximum, so at each different run, results differ depending on the coin toss results, as the algorithm converges to a different local maximum.</li>\n",
+    "    <li>The result of EM algorithm heavily depends on the coin toss experiment generated. In cases where number of heads is significantly larger than the number of tails, it updates the bias in bigger steps and tends to overshoot, giving less accurate results than MLE. In the other situation, it tends to undershoot the actual bias. Therefore, overall MLE seems to have more accurate results.</li>\n",
     "</ul>"
    ]
   },
