--- a/JupyterNotebooks/NB16_CXIII-EM_coin_toss.ipynb
+++ b/JupyterNotebooks/NB16_CXIII-EM_coin_toss.ipynb
@@ -57,9 +57,8 @@
     "    For multiple trials with the same coin, one can calculate the total probability assumming that different trials are independent from each other: <br>\n",
     "    $P(\\vec{n_H} | N) = \\prod_i \\binom{N}{n_{H}^i} p^{n^i_H} (1-p)^{N-n^i_H}$, where the probabilities are multiplied for several different trials with the same coin. Following the same procedure, one can find the $p$ that maximizes the combined binomial probability, and thus the bias of the coin.\n",
     "    </li>\n",
-    "    <li>The probability would be the combined binomial distribution, assumming that selecting a coin is completely random: <br>\n",
-    "    $P(x,z|n,\\theta) = \\frac{1}{2} \\prod_i Binomial(x_i|n,\\theta) + \\frac{1}{2} \\prod_j Binomial(x_j|n, \\theta) $ <br>\n",
-    "    Here, first term represents the probabilities where coin A is selected, and the second term represents the probabilities where coin B is selected.\n",
+    "    <li>Assumming that we know the identity of the coin tossed and the coin tosses are independent from each other, the probability of observing the results of coin toss experiments is the product of the individual probabilities: <br>\n",
+    "    $P(x,z|n,\\theta) = \\prod_i Binomial(x_i|n,\\theta)$ where the index $i$ runs over the trials in which coin A is tossed. The probability for coin B can be calculated in the exact same way, using the trials where coin B is tossed instead.\n",
     "    </li>\n",
     "    <li>MLE is merely the proportion of heads observed in coin tosses for each coin: <br>\n",
     "    $MLE_{A} = \\frac{n_A^H}{N_A}$ and $MLE_{B} = \\frac{n_B^H}{N_B}$ such that $N_A + N_B = N$, the total number of coin tosses. This is consistent with the discussion above because bias given by MLE is the exact same bias that maximizes the binomial distribution.\n",
